# todo-tonic-sqlx-refinery-barrel

./: .env.example  Cargo.toml  README.md  build.rs
proto/: todo.proto
src/: db.rs  handler.rs  main.rs  migrate.rs  model.rs
src/migrations/: V1__initial_todo_table.rs
