[package]
name = "todo"
version = "0.1.0"
authors = ["Reza Muhammad <rezmuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

# Requirements for sqlx, refinery and barrel
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "json" ] }
refinery = { version = "0.3.0", features = ["postgres"] }
barrel = { version = "0.6.5", features = ["pg"] }

# Tonic-related
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }

# Error type handling
anyhow = "1.0.31"

[build-dependencies]
tonic-build = "0.2"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

[[bin]]
name = "todo"
path = "src/main.rs"
